--- a/.gitmodules
+++ b/.gitmodules
@@ -4,6 +4,7 @@
 [submodule "public"]
 	path = public
 	url = https://github.com/owang-bio/ouwang.io.git
+	branch = main
 [submodule "themes/ramium"]
 	path = themes/ramium
 	url = https://github.com/rafed/ramium.git
